feat: add server side config